2004-02-03  Werner Koch  <wk@gnupg.org>

	* tsexp.c (basic): New pass to check secure memory switching.

2004-01-12  Moritz Schulte  <mo@g10code.com>

	* ac.c (check_one): Adjust to new ac API.

2003-11-22  Werner Koch  <wk@gnupg.org>

	* pubkey.c (check_keys_crypt): Fixed my last patch.

2003-11-11  Werner Koch  <wk@gnupg.org>

	* tsexp.c (basic): Add pass structure and a test for the %b
	format. 

2003-11-04  Werner Koch  <wk@gnupg.org>

	* Makefile.am (noinst_PROGRAMS): Use this so that test programs
	get always build.

	* keygen.c (check_nonce): New.
	(main): Add a basic check for the nocen function.

2003-10-31  Werner Koch  <wk@gnupg.org>

	* basic.c (check_aes128_cbc_cts_cipher): Make it a prototype

	* ac.c (check_run): Comment unused variable.

2003-10-10  Werner Koch  <wk@gnupg.org>

	* prime.c (check_primes): Generate a generator and avoid printing
	unless in verbose mode.

2003-10-07  Werner Koch  <wk@gnupg.org>

	* tsexp.c (check_sscan): New.

2003-09-04  Werner Koch  <wk@gnupg.org>

	* pubkey.c (check_keys_crypt): Fix for compatibility mode.

2003-09-02  Moritz Schulte  <mo@g10code.com>

	* Makefile.am (TESTS): Added: prime.

	* prime.c: New file.

2003-08-27  Moritz Schulte  <mo@g10code.com>

	* basic.c (check_ciphers): Added: Serpent.
	Write braces around flags.

2003-08-04  Moritz Schulte  <moritz@g10code.com>

	* benchmark.c (do_powm): Adjust for new gcry_mpi_scan interface.

2003-07-23  Moritz Schulte  <moritz@g10code.com>

	* ac.c (key_copy): New function...
	(check_one): ... use it.

2003-07-22  Moritz Schulte  <moritz@g10code.com>

	* basic.c (check_ciphers): Use gcry_cipher_map_name.

2003-07-18  Moritz Schulte  <moritz@g10code.com>

	* ac.c (check_run): Renamed to ...
	(check_one): ... this, changed calling interface.
	(check_run): New function.

	* register.c: Adjust gcry_cipher_spec_t structure.

2003-07-14  Moritz Schulte  <moritz@g10code.com>

	* register.c: Adjust cipher specification structure.

	* benchmark.c: New file.